# slicing-inversion

./: LICENSE  README.md  pyproject.toml
chebyshev_dicts/: chebyshev_d.pt  chebyshev_d=10.pt  chebyshev_d=100.pt  chebyshev_d=1000.pt
dev/: chebyshev.py  constants.py  quadrature.py  slicing.py  test_functions.py  utils.py
slicing_inversion/: auxiliary_functions.py  constants.py  test_functions.py
slicing_inversion/.ipynb_checkpoints/: auxiliary_functions-checkpoint.py
test/: Figures_for_Latex.ipynb  approximation_error.py  compare_to_poisson.ipynb  compare_to_poisson.py  deleteme.py  find_tau.py  forward.py  forward_error.py  regularization_comparhison.py  runtime.py  runtime_slicing.py  runtime_total.py  sanity_check.py  wrapper.py
test/.ipynb_checkpoints/: poisson-checkpoint.ipynb
